--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-            <li>Enter your javascript notes here</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>you can create a function to execute a code or lines of code when you want it to</li>
+            <li>You can add conditional statements to variables in order to output different line of code </li>
         </ul>
       </section>
     </main>
